--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,29 @@ nav .bar {
     align-items: center;
 }
 
-.hero .image .info {
+.hero .image .text {
     flex: 0.4
+}
+
+/* INFO */
+
+.info ul {
+    display: flex;
+}
+
+.info ul li {
+    flex: 1/3;
+    height: 480px;
+    width: auto;
+    background-color: blanchedalmond;
+    list-style: none;
+    padding: 30px;
+}
+
+.info ul img,
+.info ul h1,
+.info ul button {
+    text-align: center;
+    margin: auto;
+    display: block;
 }
